syntax = "proto3";

package entities;

option go_package = "goServer/internal/core/pb";
option optimize_for = SPEED;

import "hcmcore.proto";

//
//
//
service CoreService {

  rpc getWorkerById(CoreServiceRequest) returns (CoreServiceResponse);
  rpc getOrganizationById(CoreServiceRequest) returns (CoreServiceResponse);
  rpc getOrganizationByCreatorId(CoreServiceRequest) returns (CoreServiceResponse);
  rpc getRoleById(CoreServiceRequest) returns (CoreServiceResponse);
  rpc getTeamById(CoreServiceRequest) returns (CoreServiceResponse);
  rpc getRolesFromOrganization(CoreServiceRequest) returns (CoreServiceResponse);
  rpc getTeamsFromOrganization(CoreServiceRequest) returns (CoreServiceResponse);
  rpc getOrganizationMembers(CoreServiceRequest) returns (CoreServiceResponse);
  rpc getOrganizationJoinRequests(CoreServiceRequest) returns (CoreServiceResponse);
  rpc getWorkerJoinRequests(CoreServiceRequest) returns (CoreServiceResponse);
  rpc getJoinRequestById(CoreServiceRequest) returns (CoreServiceResponse);
  rpc getCompensationById(CoreServiceRequest) returns (CoreServiceResponse);
  rpc getAdditionById(CoreServiceRequest) returns (CoreServiceResponse);
  rpc getDeductionById(CoreServiceRequest) returns (CoreServiceResponse);

  rpc saveWorker(CoreServiceRequest) returns (CoreServiceResponse);
  rpc saveOrganization(CoreServiceRequest) returns (CoreServiceResponse);
  rpc saveRole(CoreServiceRequest) returns (CoreServiceResponse);
  rpc saveTeam(CoreServiceRequest) returns (CoreServiceResponse);

  rpc deleteWorkerById(CoreServiceRequest) returns (CoreServiceResponse);
  rpc deleteOrganizationById(CoreServiceRequest) returns (CoreServiceResponse);
  rpc deleteRoleById(CoreServiceRequest) returns (CoreServiceResponse);
  rpc deleteTeamById(CoreServiceRequest) returns (CoreServiceResponse);

}

//
//
//
//
message CoreServiceRequest {
  enum CoreServiceRequestClient {
    C_SUPABASE = 0;
  }

  CoreServiceRequestClient usedClient = 1;
  bool clientUnsafe = 2;

  optional GetterRequest getterRequest = 3;
  optional SetterRequest setterRequest = 4;
}

//
//
//
//
message CoreServiceResponse {
  enum CoreServiceResponseCode {
    C_NOERROR = 0;
    C_DBERROR = 1;
    C_CLIENTERROR = 2;
  }

  CoreServiceResponseCode code = 1;
  
  optional GetterResponse getterResponse = 2;
  optional SetterResponse setterResponse = 3;
}

//
//
//
message GetterRequest {
  optional int64 targetId = 1;
  optional string targetUuid = 2;
  optional string userId = 3;
}

//
//
//
message GetterResponse {
  optional string errorMessage = 10;
}

//
//
//
message SetterRequest {
  optional Worker workerTarget = 1;
  optional Organization organizationTarget = 2;
  optional Role roleTarget = 3;
  optional Team teamTarget = 4;
}

//
//
//
message SetterResponse {
  optional Worker updatedWorkerTarget = 1;
  optional Organization updatedOrganizationTarget = 2;
  optional Role updatedRoleTarget = 3;
  optional Team updatedTeamTarget = 4;

  optional int64 targetId = 5;
  optional string targetUuid = 6;
  optional string userId = 7;

  optional string errorMessage = 10;
}